--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -23,6 +23,11 @@ body > div#ui > div {
 }
 
 
+
+.hidden {
+  display: none;
+}
+
 /* ---------------------------
    score
 */
@@ -87,6 +92,10 @@ body > div#ui div#menu {
   font-weight: bold;
   /* font-size: 3.6rem; */
   color: hsl(120, 100%, 66%);
+}
+
+div#ui div#menu.anon {
+  top: calc(35% + 6em);
 }
 
 body > div#ui div#menu button {
