--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -3,7 +3,7 @@ body {
   position: relative;
 }
 
-body > div#ui {
+div#ui {
   position: absolute;
   top: 0;
   left: 0;
@@ -11,15 +11,24 @@ body > div#ui {
   height: 100%;
 
   font-family: "VT323", monospace;
-  font-size: 2.4em;
+  font-size: 2.4rem;
   text-transform: uppercase;
 }
 
-body > div#ui > div {
+@font-face {
+  font-family: "VT323";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("VT323 Regular"), local("VT323-Regular"), url("../../assets/fonts/VT323-Regular.woff2") format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+div#ui > div {
   color: white;
   background: hsla(240, 0%, 20%, 0.7);
-  padding: 0.2em 0.25em;
-  line-height: 1em;
+  padding: 0.4rem 0.7rem;
 }
 
 
@@ -33,8 +42,8 @@ body > div#ui > div {
 */
 div#ui > div.score {
   position: absolute;
-  top: 1.2em;
-  left: calc(50% - 11em);
+  top: 3rem;
+  left: 10%;
 }
 
 
@@ -43,14 +52,14 @@ div#ui > div.score {
 */
 div#ui > div.energy {
   position: absolute;
-  bottom: 1.2em;
-  left: calc(50% - 11em);
-  width: 3em;
+  bottom: 3rem;
+  left: 10%;
+  width: 7rem;
 }
 
 div.energy div.bar {
-  margin-top: 0.15em;
-  height: 0.7em;
+  margin: 0.4rem 0rem;
+  height: 1.2rem;
   width: 100%;
   background: hsl(120, 0%, 100%, 0.4);
 }
@@ -67,62 +76,63 @@ div.energy div.progress {
    banner
 */
 div#ui > div.banner {
-  font-size: 4em;
+  font-size: 7rem;
   position: absolute;
   top: 35%;
-  left: calc(50% - 8em);
-  width: 16em;
+
+  width: 100%;
   text-align: center;
 }
 
+
+div#ui > div.banner * {
+  font-size: 3.2rem;
+}
 
 
 /* ---------------------------
    Menu, buttons
 */
-body > div#ui div#menu {
-  background: hsla(240, 0%, 20%, 0.7);
+div#ui > div#menu {
   position: absolute;
-  top: 4em;
-  left: calc(50% - 6em);
-  width: 10em;
-  padding: 1em 0.5em;
+  top: 20%;
+
+  width: 100%;
+  background: transparent;
 
   text-align: center;
   font-weight: bold;
-  /* font-size: 3.6rem; */
+  font-size: 6rem;
   color: hsl(120, 100%, 66%);
 }
 
-div#ui div#menu.anon {
-  top: calc(35% + 6em);
+div#ui > div#menu.anon {
+  top: 60%;
 }
 
-body > div#ui div#menu button {
+div#menu button:first-child {
+  margin-top: 5rem;
+}
+
+div#menu button {
   background: hsla(0, 0%, 35%, 0.7);
   font-family: "VT323", monospace;
-  font-size: 36px;
+  font-size: 3.2rem;
   border: 0;
-  padding: 0.3em;
-  width: 7em;
-  margin: 0.3em auto;
+  padding: 0.3rem;
+  width: 20rem;
+  margin: 1rem auto;
 
+  display: block;
   color: hsl(120, 50%, 86%);
   font-weight: normal;
   text-transform: inherit;
 }
 
-body > div#ui div#menu button:hover {
+div#menu button:hover {
   color: hsl(120, 100%, 66%);
   background: hsla(120, 100%, 66%, 0.6);
+  cursor: pointer;
 }
 
 
-@font-face {
-  font-family: "VT323";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local("VT323 Regular"), local("VT323-Regular"), url("../../assets/fonts/VT323-Regular.woff2") format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
